[shenker/cloning,api] Restrict SQLAlchemy ORM queries to visible folders only.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220215 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220215 Geneious prototype.ipynb
@@ -136,81 +136,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b13a829-e502-4197-a585-2f07b87e53d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MAKE GENEIOUS-CREATED SEQUENCE WITH ANNOTATIONS/METADATA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4a55c878-5a25-4204-bb47-47b7fc2efa56",
    "metadata": {},
    "outputs": [],
    "source": [
     "seq = plib_maps[\"pLIB112\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fc8fe0b-df26-481d-903a-b202089bcb92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea8bfe47-c638-4c96-9f4e-9ed4967e406b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geneious.parse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd028c15-0a44-464a-b0d2-1b2a22e57a06",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d2 = geneious._parse_xml(doc2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "22779d43-ce4d-4a7b-96b2-b4ec56743ebe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d2[\"XMLSerialisableRootElement\"].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63ab9be5-6193-4435-8e09-5dbf739cb46a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = seq3.features[4].location"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c62da4c-0003-4974-986c-dea5b19e261f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x._end??"
    ]
   },
   {
@@ -284,94 +214,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efc2ee73-b43c-4648-bb88-47ee2271c7bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.find(\"charSequence\").text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e9e8580-6001-4cbe-aac9-1ac57bebb82f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.find(\"fields\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea2c1e13-d79a-455e-8d3b-8961fa733e11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.g"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79c38d78-e91d-4255-80ef-c7c5833c33a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca399dfa-5453-4bdf-aa53-8584f339c07d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.findall(\"nucleotideSequence\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f7cb422-f1be-4135-a7df-5d2b9bc3b9e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = x.find(\"fields\")  # .find(\"overrideDocumentType\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "405a074f-a472-4a24-9361-24698e22aad8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.getchildren()[0].text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ae0f4b6-a53b-4b5c-900d-f1c454fa173a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71529d9c-7282-4a6f-b952-70db9c46df4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(output.decode())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "2abb49d4-8d26-4d9e-9a7c-5fd6af878434",
    "metadata": {},
@@ -404,9 +246,66 @@
    "source": [
     "db_url = sqlalchemy.engine.URL.create(**config[\"geneious_test\"])\n",
     "engine = sqlalchemy.create_engine(db_url)\n",
-    "conn = engine.connect()\n",
-    "# Session = sqlalchemy.orm.sessionmaker(bind=engine)\n",
-    "# session = Session()"
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1aca0a-91f9-4c55-9dce-6873aa478f03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Session = sqlalchemy.orm.sessionmaker(bind=engine)\n",
+    "session = Session()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd252070-d19e-4570-bb7b-932360af17f7",
+   "metadata": {},
+   "source": [
+    "## DB test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08a4cb5b-376b-4b45-97c4-f1958a69b25b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.query(g.Folder).where(g.Folder.visible == True).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca9d9739-6433-4ad8-bcad-ff853747d7d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.query(g.Folder).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8099eb1-ace2-4dc7-802e-5f20191c3438",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = session.query(g.Folder).all()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4750f9db-2745-4204-b136-1b7d13bf5619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root.children"
    ]
   },
   {
@@ -414,7 +313,7 @@
    "id": "ca32bd60-9c3f-4518-ad9d-7284b063c321",
    "metadata": {},
    "source": [
-    "## Folders"
+    "## Old"
    ]
   },
   {
