[api,shenker/cloning] WIP geneious ORM. Now updates next_table_id automatically.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220221 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220221 Geneious prototype.ipynb
@@ -14,7 +14,7 @@
     "from Bio.SeqRecord import SeqRecord\n",
     "import benchlingapi\n",
     "import sqlalchemy\n",
-    "from sqlalchemy import select\n",
+    "from sqlalchemy import select, text\n",
     "import xmltodict\n",
     "from lxml import etree"
    ]
@@ -245,19 +245,8 @@
    "outputs": [],
    "source": [
     "db_url = sqlalchemy.engine.URL.create(**config[\"geneious_test\"])\n",
-    "engine = sqlalchemy.create_engine(db_url)\n",
-    "conn = engine.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab1aca0a-91f9-4c55-9dce-6873aa478f03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Session = sqlalchemy.orm.sessionmaker(bind=engine)\n",
-    "session = Session()"
+    "engine = sqlalchemy.create_engine(db_url, future=True, echo=True)\n",
+    "Session = sqlalchemy.orm.sessionmaker(bind=engine, future=True)"
    ]
   },
   {
@@ -271,41 +260,185 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08a4cb5b-376b-4b45-97c4-f1958a69b25b",
+   "id": "a647827d-b336-4b90-ad82-25be3ffc2047",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.query(g.Folder).where(g.Folder.visible == True).count()"
+    "session = Session()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca9d9739-6433-4ad8-bcad-ff853747d7d1",
+   "id": "98653ea8-e32a-4f5a-924c-d65ecc04c9d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.query(g.Folder).count()"
+    "q = select(g.GGroup).where(g.GGroup.name == \"Everybody\")\n",
+    "group = session.execute(q).one()[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8099eb1-ace2-4dc7-802e-5f20191c3438",
+   "id": "bf6eb79f-a78a-410e-84c1-e2ce19fddf33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root = session.query(g.Folder).all()[0]"
+    "q = select(g.Folder).where(g.Folder.name == \"bot7\")  # .where(g.Folder.visible == True)\n",
+    "res = session.execute(q).one()[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4750f9db-2745-4204-b136-1b7d13bf5619",
+   "id": "0d4deb3d-fb0c-4f5d-9e83-b77ed3724992",
    "metadata": {},
    "outputs": [],
    "source": [
-    "root.children"
+    "x = g.Folder(name=\"sub2\", g_group=group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7a8138-bbf7-4802-b308-25faa2e20ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e02d3c-5e99-40af-9e73-e235ab351c18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.add(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e50ba1e2-a8e3-4807-a3a8-8d70dc7f5a20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.parent_folder = res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3df1cca6-be0b-4011-b241-8898c29c30d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3234ddf1-a114-4105-8b98-0bd4123fa45b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res.children"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a2af185-8fcd-461b-b700-97a7d2d0c2fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "078c0a06-3151-4410-9f5c-ebdc655d1eae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlalchemy.sql as sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1c43745-f311-40bd-afd3-33449029fbab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sql.functions.max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "327ec328-e4a4-40f0-91f2-34ce13beb3ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session.begin() as session:\n",
+    "    group = session.execute(select(g.GGroup).where(g.GGroup.name == \"Everybody\")).one()[\n",
+    "        0\n",
+    "    ]\n",
+    "    print(\"group\", group)\n",
+    "    parent = session.execute(select(g.Folder).where(g.Folder.name == \"bot7\")).one()[0]\n",
+    "    print(parent)\n",
+    "    new_name = \"sub9\"\n",
+    "    new_folder = g.Folder(name=new_name, g_group=group)\n",
+    "    parent.children[new_name] = new_folder\n",
+    "    # session.execute(update(sql.functions.max(g.Table.id)))\n",
+    "    # session.execute(\"UPDATE next_table_id SET next_id = (SELECT max(id) FROM folder) WHERE table_name = 'folder'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57e02997-7468-46aa-8aec-9b4397c84961",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session.begin() as session:\n",
+    "    q = select(\n",
+    "        g.Folder\n",
+    "    )  # .where(g.Folder.name == \"bot4\")#.where(g.Folder.visible == True)\n",
+    "    res = session.execute(q).all()\n",
+    "    print(\"\\n\".join(map(str, res)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d3225b2-b316-4e22-868a-2adde232e0cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session.begin() as session:\n",
+    "    q = select(g.NextTableId)\n",
+    "    res = session.execute(q).all()\n",
+    "    print(\"\\n\".join(map(str, res)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b43e05-b8b3-4ccc-86c7-25066c9d57bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session.begin() as session:\n",
+    "    q = select(g.NextTableId)\n",
+    "    res = session.execute(q).all()\n",
+    "    print(\"\\n\".join(map(str, res)))"
    ]
   },
   {
@@ -314,37 +447,6 @@
    "metadata": {},
    "source": [
     "## Old"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "298ed05f-d069-4a9a-a0d4-60ce4d7422a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = select(g.Folder).where(g.Folder.visible == True)\n",
-    "res = conn.execute(q)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "adbb8782-f580-4fcc-98f9-67e4947b96ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res.all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "979e67fa-b1fe-427a-bff8-286c4a1582a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conn.execute(select(g.NextTableId)).all()"
    ]
   },
   {
@@ -529,7 +631,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
