[api,shenker/cloning] Use server-side CURRENT_TIMESTAMP when making new Folders, because that is what Geneious does.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220221 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220221 Geneious prototype.ipynb
@@ -244,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = sqlalchemy.engine.URL.create(**config[\"geneious_test\"])\n",
+    "db_url = sqlalchemy.engine.URL.create(**config[\"geneious_test_local\"])\n",
     "engine = sqlalchemy.create_engine(db_url, future=True, echo=True)\n",
     "Session = sqlalchemy.orm.sessionmaker(bind=engine, future=True)"
    ]
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a647827d-b336-4b90-ad82-25be3ffc2047",
+   "id": "95512292-3380-45a6-9287-1e3de0ec86f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,113 +270,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98653ea8-e32a-4f5a-924c-d65ecc04c9d3",
+   "id": "494a9d26-d259-4199-8652-52eeb781e843",
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = select(g.GGroup).where(g.GGroup.name == \"Everybody\")\n",
-    "group = session.execute(q).one()[0]"
+    "session.execute(\"SELECT max(id) FROM folder\").one()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf6eb79f-a78a-410e-84c1-e2ce19fddf33",
+   "id": "202491d8-7236-4e19-ab7f-42ab4100255e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "q = select(g.Folder).where(g.Folder.name == \"bot7\")  # .where(g.Folder.visible == True)\n",
-    "res = session.execute(q).one()[0]"
+    "session.execute(\"SELECT current_timestamp()\").one()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d4deb3d-fb0c-4f5d-9e83-b77ed3724992",
+   "id": "c01af031-2f0d-4648-84d6-c93737238a97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = g.Folder(name=\"sub2\", g_group=group)"
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d7a8138-bbf7-4802-b308-25faa2e20ae6",
+   "id": "dcbdebf1-1c90-4abf-ab0c-f00fed456f54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x"
+    "datetime.datetime.now()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8e02d3c-5e99-40af-9e73-e235ab351c18",
+   "id": "438c947a-e3fc-4527-85b1-0f72594ac31d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.add(x)"
+    "# start another geneious client (with another postgres user), add folder, see what triggers select from next_table_id\n",
+    "\n",
+    "# check cadence of select, see if the big join produces expected output\n",
+    "# (difference between python folders and geneious folders?)\n",
+    "\n",
+    "# try adding new folder, changing modified of parent folder, see if geneious selects from next_table_id"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e50ba1e2-a8e3-4807-a3a8-8d70dc7f5a20",
+   "id": "9a0c20d3-77e0-47de-8bce-b021c7d4d8f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x.parent_folder = res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3df1cca6-be0b-4011-b241-8898c29c30d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3234ddf1-a114-4105-8b98-0bd4123fa45b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res.children"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2af185-8fcd-461b-b700-97a7d2d0c2fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "078c0a06-3151-4410-9f5c-ebdc655d1eae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sqlalchemy.sql as sql"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1c43745-f311-40bd-afd3-33449029fbab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sql.functions.max"
+    "# 2022-02-21 17:26:39.479 EST,\"newuser\",\"geneious_test1\",23897,\"127.0.0.1:64955\",62140436.5d59,1580,\"SELECT\",2022-02-21 16:29:26 EST,4/1573,0,LOG,00000,\"execute S_4: SELECT A.id,A.name,g_group_id,A.modified,document_urn,parent_folder_id,visible, C.xml AS folderColourXml, (CASE WHEN C.modified IS NOT NULL THEN C.modified ELSE CURRENT_TIMESTAMP END) AS folderColourModified FROM folder A LEFT OUTER JOIN folder_view B ON A.id = B.folder_id LEFT OUTER JOIN special_element C ON A.id = C.folder_id AND C.name = 'folderColor' WHERE A.modified > $1 AND A.modified < $2 AND id NOT IN (select hidden_folder_id from hidden_folder_to_user WHERE user_id != $3)\",\"parameters: $1 = '2022-02-21 17:00:43.453', $2 = '2022-02-21 17:26:39.479', $3 = '1'\",,,,,,,,\"PostgreSQL JDBC Driver\",\"client backend\",,0"
    ]
   },
   {
@@ -386,18 +339,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with Session.begin() as session:\n",
-    "    group = session.execute(select(g.GGroup).where(g.GGroup.name == \"Everybody\")).one()[\n",
-    "        0\n",
-    "    ]\n",
-    "    print(\"group\", group)\n",
-    "    parent = session.execute(select(g.Folder).where(g.Folder.name == \"bot7\")).one()[0]\n",
-    "    print(parent)\n",
-    "    new_name = \"sub9\"\n",
-    "    new_folder = g.Folder(name=new_name, g_group=group)\n",
-    "    parent.children[new_name] = new_folder\n",
-    "    # session.execute(update(sql.functions.max(g.Table.id)))\n",
-    "    # session.execute(\"UPDATE next_table_id SET next_id = (SELECT max(id) FROM folder) WHERE table_name = 'folder'\")"
+    "for idx in range(40):\n",
+    "    with Session.begin() as session:\n",
+    "        group = session.execute(\n",
+    "            select(g.GGroup).where(g.GGroup.name == \"Everybody\")\n",
+    "        ).one()[0]\n",
+    "        print(\"group\", group)\n",
+    "        parent = session.execute(select(g.Folder).where(g.Folder.name == \"xxx5\")).one()[\n",
+    "            0\n",
+    "        ]\n",
+    "        print(parent)\n",
+    "        new_name = f\"sub{idx}\"\n",
+    "        new_folder = g.Folder(name=new_name, g_group=group)\n",
+    "        new_folder.parent_folder = parent\n",
+    "        parent.modified = text(\"current_timestamp\")  # datetime.datetime.utcnow()\n",
+    "        session.add(new_folder)\n",
+    "        # parent.children[new_name] = new_folder\n",
+    "        # session.execute(update(sql.functions.max(g.Table.id)))\n",
+    "        # session.execute(\"UPDATE next_table_id SET next_id = (SELECT max(id) FROM folder) WHERE table_name = 'folder'\")"
    ]
   },
   {
@@ -431,12 +390,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d9e5633f-6a11-4b38-8795-c40e1ec0bb54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session.begin() as session:\n",
+    "    res = session.execute(text(\"SELECT * from folder;\")).all()\n",
+    "    print(\"\\n\".join(map(str, res)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "08b43e05-b8b3-4ccc-86c7-25066c9d57bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "with Session.begin() as session:\n",
     "    q = select(g.NextTableId)\n",
+    "    res = session.execute(q).all()\n",
+    "    print(\"\\n\".join(map(str, res)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6f8f27c-8e06-44f3-be4a-a3919b6462bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with Session.begin() as session:\n",
+    "    q = select(g.Folder)\n",
     "    res = session.execute(q).all()\n",
     "    print(\"\\n\".join(map(str, res)))"
    ]
