--- a/paulssonlab/src/paulssonlab/shenker/cloning/220222 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220222 Geneious prototype.ipynb
@@ -119,120 +119,55 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de6f850b-b0be-4688-aba3-f8ff186c4369",
+   "id": "31b80fd6-d57a-4b15-9218-0c392e2cd8da",
    "metadata": {},
+   "source": [
+    "# Client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63f30b21-faf7-4666-b197-b399ec0c0be6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = geneious.GeneiousClient(**config[\"geneious_test_local\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c2e9203-683a-4ce6-839a-5d63e24e5387",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.subfolder[\n",
+    "    (\"foo\", \"bar\")\n",
+    "]  # -> GeneiousClient with root=(\"foo\", \"bar\"); shares GeneiousClientState dataclass with original\n",
+    "client.subfolder[(\"foo\", \"bar\")].items()  # a way of iterating a subfolder\n",
+    "client[\"rootseq\"]\n",
+    "client[(\"foo\", \"bar\", \"childseq\")]  # -> DsSeqRecord/Primer\n",
+    "client.raw[\"rootseq\"]  # -> ORM object?\n",
+    "client.raw[\"rootseq\"]  # -> hhh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de6f850b-b0be-4688-aba3-f8ff186c4369",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Test"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ea757528-dfdf-4c26-a7bd-0efc2189046b",
-   "metadata": {},
-   "source": [
-    "## XML"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a55c878-5a25-4204-bb47-47b7fc2efa56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq = plib_maps[\"pLIB112\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ecc05f9-e615-40bf-b0a3-285561a0fe89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from xmldiff.main import diff_texts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8245f88a-b25a-445d-b7b8-2b845abdfe15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = etree.tostring(geneious.dump_geneious(seq4), pretty_print=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "098349f4-112b-4dd2-b61b-a1e6c558f8db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = etree.fromstring(doc4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbe5745b-6639-4df5-b4a3-e5b84c1c5ca1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geneious.load_geneious(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9a4b0ca-3b1b-431c-a051-a26cfc716f10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq4.annotations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2b98dfa-1646-49a8-b4d7-004ec753ac5b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq4.annotations[\"references\"][0].__class__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3138ee08-c260-4809-9e0a-809e6ea12ce1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geneious.loads_geneious(doc4).annotations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2abb49d4-8d26-4d9e-9a7c-5fd6af878434",
-   "metadata": {},
-   "source": [
-    "## Round-trip: seq->geneious-seq"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "754dda07-c981-4436-a94d-dda0c7f96d6f",
-   "metadata": {},
-   "source": [
-    "## Round-trip: geneious->seq->geneious"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7c7ef2e2-d0dd-4202-8b51-c09de7866284",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## DB"
    ]
@@ -270,6 +205,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "45178060-5d18-47cb-a822-97ac84e1e38e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = session.execute(select(g.Folder).where(g.Folder.name == \"plasmids\")).one()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8600a56-f7b8-41b9-87d2-0b61e6e8012c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.annotated_documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65aaf045-c7ae-4a53-b6ec-ad4196b66307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = x.annotated_documents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cadb493-f501-4861-84dc-4c035c9d1fe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.additional_document_xml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "494a9d26-d259-4199-8652-52eeb781e843",
    "metadata": {},
    "outputs": [],
@@ -285,6 +260,16 @@
    "outputs": [],
    "source": [
     "session.execute(\"SELECT current_timestamp()\").one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f1ab5fb-29a6-4279-bc32-f9c8e878083c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.execute(\"SELECT document_urn, element_key FROM additional_document_xml\").all()"
    ]
   },
   {
@@ -423,6 +408,110 @@
     "    q = select(g.Folder)\n",
     "    res = session.execute(q).all()\n",
     "    print(\"\\n\".join(map(str, res)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73bd8c4d-9304-416d-81c6-0fdac4961af3",
+   "metadata": {},
+   "source": [
+    "## XML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a55c878-5a25-4204-bb47-47b7fc2efa56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq = plib_maps[\"pLIB112\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ecc05f9-e615-40bf-b0a3-285561a0fe89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xmldiff.main import diff_texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8245f88a-b25a-445d-b7b8-2b845abdfe15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = etree.tostring(geneious.dump_geneious(seq4), pretty_print=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "098349f4-112b-4dd2-b61b-a1e6c558f8db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = etree.fromstring(doc4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bbe5745b-6639-4df5-b4a3-e5b84c1c5ca1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geneious.load_geneious(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9a4b0ca-3b1b-431c-a051-a26cfc716f10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2b98dfa-1646-49a8-b4d7-004ec753ac5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq4.annotations[\"references\"][0].__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3138ee08-c260-4809-9e0a-809e6ea12ce1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "geneious.loads_geneious(doc4).annotations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f76f7102-1d99-412a-99f2-0fd26e8a148b",
+   "metadata": {},
+   "source": [
+    "## Round-trip: seq->geneious-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb0337e0-92db-41d7-940b-ceb39104bb1f",
+   "metadata": {},
+   "source": [
+    "## Round-trip: geneious->seq->geneious"
    ]
   },
   {
