[shenker/cloning] WIP need to update modification time on parent folder to get AnnotatedDocument to show up in Geneious.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220223 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220223 Geneious prototype.ipynb
@@ -256,12 +256,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"oLIB250\"\n",
-    "description = \"JUMP_UNS9_flipped_f\"\n",
+    "idx = 9\n",
+    "name = f\"oLIB250_{idx}\"\n",
+    "description = f\"JUMP_UNS9_flipped_f{idx}\"\n",
     "# urn = geneious.make_urn()\n",
-    "urn = \"urn:local:jjjjj:k-ehu829p\"\n",
-    "# timestamp = geneious.geneious_timestamp()\n",
-    "timestamp = 1644769260272\n",
+    "urn = f\"urn:local:jjjj{idx}:k-ehu829p\"\n",
+    "timestamp = geneious.geneious_timestamp()\n",
+    "# timestamp = 1644517862199\n",
     "dt = datetime.fromtimestamp(timestamp / 1000)\n",
     "# s = primers.Primer(overhang=\"CCAGGATACATAGATTACCACAACTCCGAGCCCTTCCACC\", binding=\"CAAAACTCCTTAATTAAAGG\")\n",
     "# document_xml, plugin_document_xml = geneious.dumps_geneious(s, urn, document_type=\"primer\", name=name, description=description, timestamp=timestamp)"
@@ -288,11 +289,11 @@
     "  <hiddenFields>\n",
     "    <unread type=\"boolean\">false</unread>\n",
     "    <cache_plugin_document_urn></cache_plugin_document_urn>\n",
-    "    <cache_urn type=\"urn\">urn:local:jjjjj:k-ehu829p</cache_urn>\n",
+    "    <cache_urn type=\"urn\">{urn}</cache_urn>\n",
     "    <nucleotideSequenceWithQualityCount type=\"int\">0</nucleotideSequenceWithQualityCount>\n",
-    "    <description>JUMP_UNS9_flipped_f</description>\n",
-    "    <cache_name>oLIB250</cache_name>\n",
-    "    <override_modified_date type=\"date\">1644769260272</override_modified_date>\n",
+    "    <description>{description}</description>\n",
+    "    <cache_name>{name}</cache_name>\n",
+    "    <override_modified_date type=\"date\">{timestamp}</override_modified_date>\n",
     "    <cache_created type=\"date\">1644517862199</cache_created>\n",
     "    <trimmedSequencesCount type=\"int\">0</trimmedSequencesCount>\n",
     "  </hiddenFields>\n",
@@ -745,7 +746,7 @@
     "adoc = g.AnnotatedDocument(\n",
     "    parent_folder=test2,\n",
     "    urn=urn,\n",
-    "    modified=text(\"current_timestamp\"),\n",
+    "    modified=dt,\n",
     "    document_xml=document_xml,\n",
     "    plugin_document_xml=plugin_document_xml,\n",
     "    reference_count=0,\n",
@@ -755,7 +756,8 @@
     "# session.add(g.AdditionalXmlTimestamp(document_urn=urn, g_user_id=-1, modified=dt))\n",
     "# session.add(g.AdditionalDocumentXml(document_urn=urn, element_key=\"sequenceViewOptions\", xml_element=sequence_view_options_xml, geneious_major_version_1=2022, geneious_major_version_2=0, g_user_id=-1))\n",
     "# session.add(g.AdditionalDocumentXml(document_urn=urn, element_key=\"DocumentHistory\", xml_element=document_history_xml, geneious_major_version_1=2022, geneious_major_version_2=0, g_user_id=-1))\n",
-    "# session.add(g.AdditionalDocumentXml(document_urn=urn, element_key=\"annotations_sequenceViewDedicatedAnnotationsOptions\", xml_element=sequence_view_dedicated_xml, geneious_major_version_1=2022, geneious_major_version_2=0, g_user_id=-1))"
+    "# session.add(g.AdditionalDocumentXml(document_urn=urn, element_key=\"annotations_sequenceViewDedicatedAnnotationsOptions\", xml_element=sequence_view_dedicated_xml, geneious_major_version_1=2022, geneious_major_version_2=0, g_user_id=-1))\n",
+    "test2.modified = dt  # text(\"current_timestamp\")"
    ]
   },
   {
