--- a/paulssonlab/src/paulssonlab/shenker/cloning/220226 Geneious prototype.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220226 Geneious prototype.ipynb
@@ -202,7 +202,87 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95fae08c-56c6-4ce8-8b1b-68d70c3db60c",
+   "id": "38612951-c1b9-441f-aa6f-56349187766c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = session.execute(select(g.AnnotatedDocument)).all()[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39f6ac41-a869-4bc6-b4f1-ba3baea972f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4194579-8034-4412-b8c6-cdfaa48f4d6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(z.document_xml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aef57eac-47f2-47e2-8a70-df8e6263c70d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(z.plugin_document_xml)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "064007fb-4186-4a19-8ce9-c53f6b693327",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = session.execute(select(g.AdditionalDocumentXml)).all()  # [3][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c473ca16-2373-4f4e-9dbd-03c431add394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6ce3b15-d011-4cd7-9596-89584ce6d168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(y[0][0].xml_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5c1aee-8cba-4808-81c1-a93705026d9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(y.xml_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cddcdfb-bb32-4db1-8403-daa88410b3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,17 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461e9d79-4133-436e-ad92-ccdd3e661c94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.execute(select(g.AdditionalDocumentXml)).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "609ed5e4-486b-467d-80a3-6849cddcca29",
+   "id": "402a6085-a30e-4d60-bf05-df6c472a86c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,31 +302,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "452dd595-8e49-4026-8230-7eeb8932e548",
+   "id": "070f3ddc-d91a-4a75-a33f-308bb61b10d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.execute(select(g.AdditionalXmlTimestamp)).all()"
+    "session.delete(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9892eb09-b761-49ba-aefd-796882d2c75e",
+   "id": "38e93920-3de9-422c-a334-846ad8b9a011",
    "metadata": {},
    "outputs": [],
    "source": [
-    "session.execute(select(g.t_document_read)).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4d9ed97-5f1b-4dde-8483-bb68702f680c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clear t_document_read"
+    "session.commit()"
    ]
   },
   {
@@ -266,148 +326,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 5\n",
-    "name = f\"oLIB250_{idx}\"\n",
-    "description = f\"JUMP_UNS9_flipped_f{idx}\"\n",
+    "idx = 0\n",
+    "name = f\"seq_{idx}\"\n",
+    "description = f\"seq_descr_{idx}\"\n",
     "# urn = geneious.make_urn()\n",
     "urn = f\"urn:local:jjjj{idx}:k-ehu829p\"\n",
+    "plugin_urn = f\"urn:sequence:genbank:129361{idx}\"\n",
     "timestamp = geneious.geneious_timestamp()\n",
     "# timestamp = 1644517862199\n",
-    "dt = datetime.fromtimestamp(timestamp / 1000)\n",
-    "# s = primers.Primer(overhang=\"CCAGGATACATAGATTACCACAACTCCGAGCCCTTCCACC\", binding=\"CAAAACTCCTTAATTAAAGG\")\n",
-    "# document_xml, plugin_document_xml = geneious.dumps_geneious(s, urn, document_type=\"primer\", name=name, description=description, timestamp=timestamp)"
+    "dt = datetime.fromtimestamp(timestamp / 1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b87acf9-bc2a-4980-926e-763a8f4e5de3",
+   "id": "c3fc2e4d-59b7-4bd0-bae6-e9c4cd0b96b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = session.execute(select(g.GUser).where(g.GUser.username == \"remoteuser\")).one()[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf2f11f4-9168-4983-bc9f-69003416bcad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "u = str(uuid.uuid1())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30daed8f-7442-40c7-be4d-773ef40860e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plugin_document_xml = f\"\"\"<XMLSerialisableRootElement>\n",
-    "  <fields>\n",
-    "    <oligoType>Primer</oligoType>\n",
-    "    <molType>DNA</molType>\n",
-    "  </fields>\n",
-    "  <created type=\"date\">{timestamp}</created>\n",
-    "  <storedFields>\n",
-    "    <standardField code=\"organism\" />\n",
-    "    <field class=\"com.biomatters.geneious.publicapi.documents.DocumentField\">\n",
-    "      <DocumentField>\n",
-    "        <name>Oligo Type</name>\n",
-    "        <description>The type of oligonulceotide, one of: Primer and Probe</description>\n",
-    "        <code>oligoType</code>\n",
-    "        <type>java.lang.String</type>\n",
-    "        <enumerationOptions>\n",
-    "          <value>Primer</value>\n",
-    "          <value>Probe</value>\n",
-    "        </enumerationOptions>\n",
-    "      </DocumentField>\n",
-    "    </field>\n",
-    "  </storedFields>\n",
-    "  <name>{name}</name>\n",
-    "  <description>{description}</description>\n",
-    "  <sequenceAnnotations>\n",
-    "    <annotation>\n",
-    "      <description>Binding Region</description>\n",
-    "      <type>primer_bind</type>\n",
-    "      <intervals>\n",
-    "        <interval>\n",
-    "          <minimumIndex>27</minimumIndex>\n",
-    "          <maximumIndex>43</maximumIndex>\n",
-    "          <direction>leftToRight</direction>\n",
-    "        </interval>\n",
-    "      </intervals>\n",
-    "      <qualifiers>\n",
-    "        <qualifier>\n",
-    "          <name>annotation group</name>\n",
-    "          <value>{u}</value>\n",
-    "        </qualifier>\n",
-    "        <qualifier>\n",
-    "          <name>Sequence</name>\n",
-    "          <value>CGCGCGCCGGCGCGGCG</value>\n",
-    "        </qualifier>\n",
-    "        <qualifier>\n",
-    "          <name>Extension</name>\n",
-    "          <value>TTTTTTTAAAAAAAAAAAAAAAAAAA</value>\n",
-    "        </qualifier>\n",
-    "      </qualifiers>\n",
-    "    </annotation>\n",
-    "  </sequenceAnnotations>\n",
-    "  <charSequence>TTTTTTTAAAAAAAAAAAAAAAAAAACGCGCGCCGGCGCGGCG</charSequence>\n",
-    "  <primerAnnotation class=\"com.biomatters.geneious.publicapi.documents.sequence.SequenceAnnotation\">\n",
-    "    <annotation>\n",
-    "      <description>Binding Region</description>\n",
-    "      <type>primer_bind</type>\n",
-    "      <intervals>\n",
-    "        <interval>\n",
-    "          <minimumIndex>27</minimumIndex>\n",
-    "          <maximumIndex>43</maximumIndex>\n",
-    "          <direction>leftToRight</direction>\n",
-    "        </interval>\n",
-    "      </intervals>\n",
-    "      <qualifiers>\n",
-    "        <qualifier>\n",
-    "          <name>annotation group</name>\n",
-    "          <value>{u}</value>\n",
-    "        </qualifier>\n",
-    "        <qualifier>\n",
-    "          <name>Sequence</name>\n",
-    "          <value>CGCGCGCCGGCGCGGCG</value>\n",
-    "        </qualifier>\n",
-    "        <qualifier>\n",
-    "          <name>Extension</name>\n",
-    "          <value>TTTTTTTAAAAAAAAAAAAAAAAAAA</value>\n",
-    "        </qualifier>\n",
-    "      </qualifiers>\n",
-    "    </annotation>\n",
-    "  </primerAnnotation>\n",
-    "</XMLSerialisableRootElement>\"\"\"\n",
-    "\n",
-    "document_xml = f\"\"\"<document class=\"com.biomatters.geneious.publicapi.implementations.sequence.OligoSequenceDocument\" version=\"1.3-11\" revisionNumber=\"1\" geneiousVersion=\"2022.0.2\" geneiousVersionMinimum=\"7.1\" PluginDocument_FormatLastChanged=\"7.1\" PluginDocument_FormatLastExtended=\"8.1\" PluginDocument_OldestVersionSerializableTo=\"6.0\">\n",
-    "  <hiddenFields>\n",
-    "    <cache_plugin_document_urn></cache_plugin_document_urn>\n",
-    "    <cache_urn type=\"urn\">{urn}</cache_urn>\n",
-    "    <nucleotideSequenceWithQualityCount type=\"int\">0</nucleotideSequenceWithQualityCount>\n",
-    "    <description>{description}</description>\n",
-    "    <cache_name>{name}</cache_name>\n",
-    "    <override_modified_date type=\"date\">{timestamp}</override_modified_date>\n",
-    "    <cache_created type=\"date\">{timestamp}</cache_created>\n",
-    "    <trimmedSequencesCount type=\"int\">0</trimmedSequencesCount>\n",
-    "  </hiddenFields>\n",
-    "  <fields>\n",
-    "    <document_size type=\"bytes\">{len(plugin_document_xml)}</document_size>\n",
-    "    <topology>linear</topology>\n",
-    "    <sequence_length type=\"int\">43</sequence_length>\n",
-    "    <sequence_residues>TTTTTTTAAAAAAAAAAAAAAAAAAACGCGCGCCGGCGCGGCG</sequence_residues>\n",
-    "    <modified_date type=\"date\">{timestamp}</modified_date>\n",
-    "    <oligoType>Primer</oligoType>\n",
-    "  </fields>\n",
-    "  <notes>\n",
-    "    <note code=\"primerInfo\" type=\"note\" />\n",
-    "  </notes>\n",
-    "</document>\"\"\""
+    "# s = cio.read_file(\"/Users/jacob/Downloads/_temp/raw_sample_gb.gb\")\n",
+    "s = cio.read_file(\"/Users/jacob/Downloads/_plasmids/pLIB112.gbk\")"
    ]
   },
   {
@@ -417,11 +355,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s = primers.Primer(overhang=\"TTTTTTTAAAAAAAAAAAAAAAAAAA\", binding=\"CGCGCGCCGGCGCGGCG\")\n",
     "document_xml, plugin_document_xml = geneious.dumps_geneious(\n",
     "    s,\n",
     "    urn,\n",
-    "    document_type=\"primer\",\n",
+    "    document_type=\"genbank\",\n",
     "    name=name,\n",
     "    description=description,\n",
     "    timestamp=timestamp,\n",
@@ -461,6 +398,16 @@
    "outputs": [],
    "source": [
     "session.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b87acf9-bc2a-4980-926e-763a8f4e5de3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = session.execute(select(g.GUser).where(g.GUser.username == \"remoteuser\")).one()[0]"
    ]
   },
   {
