[deaton] a bunch of stuff

--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-08-10_lDE20_20x_biofloat_run_1_UMAP/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-08-10_lDE20_20x_biofloat_run_1_UMAP/Master.ipynb
@@ -569,7 +569,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(final_output_df_pd_filtered) / len(final_output_df_pd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.read_pickle(\"./2021-08-10_lDE20_Lineage_Analysis_filtered.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.read_pickle(\"./2021-08-10_lDE20_Lineage_Analysis_filtered.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final_output_df_pd_filtered = pd.read_pickle(\"./2021-08-10_lDE20_Lineage_Analysis_filtered.pkl\")"
    ]
   },
   {
@@ -4240,7 +4267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
