--- a/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-09-24_snakemake_lDE20_v2/analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/nanopore/dev_notebooks/2021-09-24_snakemake_lDE20_v2/analysis.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "\n",
+    "import dask.dataframe as dd\n",
     "\n",
     "from Bio import SeqIO\n",
     "from Bio.Seq import Seq\n",
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"../2021-07-11_snakemake_lDE20/output.tsv\", delimiter=\"\\t\")\n",
+    "data = pd.read_csv(\"./output.tsv\", delimiter=\"\\t\")\n",
     "ref_intervals = get_ref_intervals(\"./aDE12.gfa\")\n",
     "barcodes = set(data[\"barcode\"].tolist())"
    ]
@@ -171,15 +171,6 @@
    "source": [
     "bit_arr = np.array([list(item) for item in barcodes]).astype(\"uint8\")\n",
     "bit_freq = np.mean(bit_arr, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bit_arr"
    ]
   },
   {
@@ -333,6 +324,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -343,7 +343,7 @@
     "    local=False,\n",
     "    n_workers=50,\n",
     "    memory=\"16GB\",\n",
-    "    working_directory=\"/home/de64/scratch/de64/sync_folder/2021-05-22_snakemake_lDE20/dask\",\n",
+    "    working_directory=\"/home/de64/scratch/de64/dask\",\n",
     ")\n",
     "\n",
     "dask_controller.startdask()"
@@ -499,7 +499,7 @@
    "source": [
     "import pickle as pkl\n",
     "\n",
-    "with open(\"barcode_counts_dict.pkl\", \"rb\") as infile:\n",
+    "with open(\"./barcode_counts_dict.pkl\", \"rb\") as infile:\n",
     "    depth_dict = pkl.load(infile)"
    ]
   },
@@ -545,7 +545,7 @@
     "plt.ylabel(\"N Barcodes\", fontsize=20)\n",
     "plt.yticks(fontsize=20)\n",
     "plt.legend(fontsize=20)\n",
-    "# plt.savefig(\"./depth_distribution.png\",dpi=300,bbox_inches=\"tight\")\n",
+    "plt.savefig(\"./depth_distribution.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
   },
@@ -556,41 +556,6 @@
    "outputs": [],
    "source": [
     "len(closest_match_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller = tr_dask_controller(\n",
-    "    walltime=\"02:00:00\",\n",
-    "    local=False,\n",
-    "    n_workers=10,\n",
-    "    memory=\"16GB\",\n",
-    "    working_directory=\"/home/de64/scratch/de64/sync_folder/2021-05-22_snakemake_lDE20/dask\",\n",
-    ")\n",
-    "\n",
-    "dask_controller.startdask()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller.daskclient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller.shutdown()"
    ]
   },
   {
@@ -668,15 +633,6 @@
     "del split_ref\n",
     "\n",
     "data_df = data_df.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "UMI"
    ]
   },
   {
@@ -880,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
