--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-04_Examining_Transients/Transients_Analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-04_Examining_Transients/Transients_Analysis.ipynb
@@ -480,7 +480,9 @@
   {
    "cell_type": "markdown",
    "id": "lonely-mainland",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Renormalization"
    ]
@@ -6442,7 +6444,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6456,7 +6458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   },
   "toc-showcode": false
  },
