--- a/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/1_Core_Image_Processing.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/CRISPRi_Libraries/dev_notebooks/2021-09-24_Combined_Analysis_v1/1_Core_Image_Processing.ipynb
@@ -1243,7 +1243,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Test Parameters"
    ]
@@ -1323,7 +1325,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Generate Lineage Traces"
    ]
@@ -2662,7 +2666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
