[shenker/cloning] Messed up Weiss RBS overhangs, fixed it.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220316 Weiss RBS parts.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220316 Weiss RBS parts.ipynb
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "orig_rbs_names = [\"B0033m_BC\", \"B0032m_BC\", \"B0034m_BC\"]\n",
-    "part_type = \"Insulated_RBS\"\n",
+    "part_type = \"5UTR_Insulated_RBS\"\n",
     "part_overhangs = workflow.overhangs_for(part_types[part_type])\n",
     "use_storage_vector = True\n",
     "part_enzyme = Restriction.BsaI\n",
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "olib_oligos.commit()\n",
-    "# lib_parts.commit()"
+    "lib_parts.commit()"
    ]
   },
   {
